--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -26,6 +26,10 @@
         <a class="nav-link" href="/login">Log in</a>
         <% } else { %>
         <a class="nav-link" href="/logout">Log out</a>
+        <a class="nav-link" href="/deleteUser"
+          >Delete @<%=currUser.username%></a
+        >
+
         <% } %>
       </div>
     </div>
