--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,4 +1,3 @@
-<!-- <%- // include("../includes/header.ejs") %> -->
 <% layout("/layouts/boilerplate.ejs") %>
 
 <title>Wanderlust : New Listing</title>
@@ -15,6 +14,7 @@
       method="POST"
       class="needs-validation"
       novalidate
+      enctype="multipart/form-data"
     >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
@@ -41,26 +41,27 @@
           placeholder="Enter description"
           required
         >
-<%=listing.description%>
-          </textarea
+<%=listing.description%></textarea
         >
         <div class="valid-feedback">Looks good!</div>
         <div class="invalid-feedback">Description cannot be Empty</div>
       </div>
 
       <div class="mb-3">
-        <label class="form-label" for="link">Image Link</label>
+        <label class="form-label" for="">Original Image</label>
+        <br />
+        <img src="<%=originalImageUrl%>" alt="" class="previewImage w-50" />
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="image">Upload New Image</label>
         <input
-          id="link"
+          id="image"
           class="form-control"
-          type="text"
-          name="listing[image][url]"
-          placeholder="Enter image URL/LINK"
-          value="<%=listing.image.url%>"
-          required
+          type="file"
+          name="listing[image]"
         />
         <div class="valid-feedback">Looks good!</div>
-        <div class="invalid-feedback">Please enter a valid link for Image</div>
       </div>
 
       <div class="row">
@@ -117,5 +118,3 @@
     </form>
   </div>
 </div>
-
-<!-- <%- // include("../includes/footer.ejs") %> -->
