--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,4 +1,3 @@
-<!-- <%- // include("../includes/header.ejs") %> -->
 <% layout("/layouts/boilerplate.ejs") %>
 
 <title>Wanderlust</title>
@@ -6,16 +5,8 @@
 <div class="heading">
   <h3>All Listings</h3>
   <hr class="hr" />
-  <!-- <form method="GET" action="/listings/new">
-    <button>Add Listing</button>
-  </form> -->
 </div>
 
-<!-- <ul>
-  <% // for(listing of listings ) { %>
-  <li><a href="/listings/<%= // listing._id%>"><%= // listing.title%></a></li>
-  <% // } %>
-</ul> -->
 <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
   <% for(listing of listings ) { %>
   <div class="listing p-4">
@@ -29,7 +20,7 @@
             style="height: 20rem"
           />
         </div>
-        <div class="card-img-overlay"></div>
+        <div class="card-img-overlay overlay"></div>
         <div class="card-body listing-body m-1">
           <h5 class="card-title"><b><%=listing.title%></b></h5>
           <h6 class="card-subtitle mb-2 text-body-secondary">
@@ -48,5 +39,3 @@
   </div>
   <% } %>
 </div>
-
-<!-- <%- // include("../includes/footer.ejs") %> -->
