Completed Phase 3 - Part c

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -36,6 +36,12 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.js"></script>
     <!-- Vanilla CSS -->
     <link rel="stylesheet" href="/css/style.css" />
+    <!-- Website Logo -->
+    <link
+      rel="shortcut icon"
+      href="https://cdn0.iconfinder.com/data/icons/shift-free/32/Paper_Plane-512.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <!-- Navbar -->
