--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,8 +1,8 @@
 <% layout("/layouts/boilerplate.ejs") %>
-<title>Wanderlust : New Listing</title>
+<title><%= appName %> : New Listing</title>
 <div class="row">
   <div class="col-8 offset-2">
-    <h3>Add New Listing to Wanderlust</h3>
+    <h3>Add New Listing to <%= appName %></h3>
     <hr class="hr" />
 
     <form
