--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,7 +6,7 @@
   console.log(listing);
 </script>
 
-<title>Wanderlust : <%=listing.title%></title>
+<title><%= appName %> : <%=listing.title%></title>
 
 <div class="row mb-5">
   <div class="col-md-9 offset-md-3">
