--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate.ejs") %>
 <div class="row">
   <div class="col-6 offset-3">
-    <h1>Login to Wanderlust</h1>
+    <h1>Login to <%= appName %></h1>
     <hr class="hr" />
   </div>
   <div class="col-6 offset-3">
