--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,15 +26,15 @@ body {
   margin-right: 3rem;
 }
 
-.fa-compass {
+.fa-paper-plane {
   color: #fe424d;
   font-size: 2rem;
   transition: 0.3s linear;
   margin-right: 1rem;
 }
 
-.navbar-brand:hover > .fa-compass {
-  text-shadow: 0 0 3px #fe424d;
+.navbar-brand:hover > .fa-paper-plane {
+  text-shadow: 0 0 2px #fe424d;
 }
 
 .brand-name {
@@ -49,6 +49,35 @@ body {
 .navbar-collapse {
   transition: 0.4s ease-in;
   background-color: #fff;
+}
+
+.search-inp {
+  border-radius: 1.5rem;
+  padding: 0.5rem 3rem;
+  font-size: 1rem;
+}
+
+.search-btn {
+  background-color: #fe424d;
+  color: white;
+  border-radius: 1.5rem;
+  padding: 0 1rem;
+}
+
+.search-btn:hover {
+  border: 1px solid #fe424d;
+  color: #fe424d;
+}
+
+.search-btn:active {
+  border: 1px solid #ff212f !important;
+  color: #ff212f !important;
+  box-shadow: 0 0 0.25rem #ff212f;
+}
+
+.search-btn i {
+  display: inline;
+  margin-right: 0.5rem;
 }
 
 .nav-link {
