--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings">
-      <i class="fa-regular fa-compass"></i>
-      <span class="brand-name"> Wanderlust </span>
+      <i class="fa-regular fa-paper-plane"></i>
+      <span class="brand-name"> <%= appName %> </span>
     </a>
     <button
       class="navbar-toggler"
@@ -15,21 +15,29 @@
     <div class="collapse navbar-collapse mt-1" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <hr class="hr" />
-        <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/listings">All Listing</a>
-        <a class="nav-link" href="/listings/new">Add new Listing</a>
+        <!-- <a class="nav-link" href="/">Home</a> -->
+        <a class="nav-link" href="/listings">Explore</a>
       </div>
       <div class="navbar-nav ms-auto">
+        <form class="d-flex" role="search">
+          <input
+            class="form-control me-2 search-inp"
+            type="search"
+            placeholder="Search Destinations"
+          />
+          <button class="btn search-btn" type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>Search
+          </button>
+        </form>
+      </div>
+      <div class="navbar-nav ms-auto">
+        <a class="nav-link" href="/listings/new"><%= appName %> your Home</a>
         <hr class="hr" />
         <% if(!currUser) { %>
-        <a class="nav-link" href="/signup">Sign up</a>
-        <a class="nav-link" href="/login">Log in</a>
+        <a class="nav-link" href="/signup"><b>Sign up</b></a>
+        <a class="nav-link" href="/login"><b>Log in</b></a>
         <% } else { %>
         <a class="nav-link" href="/logout">Log out</a>
-        <a class="nav-link" href="/deleteUser"
-          >Delete @<%=currUser.username%></a
-        >
-
         <% } %>
       </div>
     </div>
