--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate.ejs") %>
 
-<title>Wanderlust : New Listing</title>
+<title><%= appName %> : New Listing</title>
 
 <div class="row mb-5">
   <div class="col-8 offset-2">
