--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -60,5 +60,5 @@
     crossorigin="anonymous"
   ></script>
   <!-- Vanilla JS -->
-  <script src="/js/script.js"></script>
+  <script src="/js/formValidation.js"></script>
 </html>
