--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,67 +1,5 @@
 <% layout("/layouts/boilerplate.ejs") %>
 
-<style>
-  .filter-bar {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  #filters {
-    display: flex;
-    width: 80%;
-    overflow: hidden;
-  }
-
-  .filter {
-    text-align: center;
-    margin: 0.2rem 1rem;
-    opacity: 0.5;
-  }
-
-  .filter:hover {
-    opacity: 1;
-    cursor: pointer;
-    transition: 0.2s linear;
-  }
-
-  .filter:hover > .underline {
-    opacity: 0.5;
-    transition: 0.2s linear;
-  }
-
-  .filter span {
-    font-size: 0.8rem;
-  }
-
-  .underline {
-    width: 95%;
-    margin: 0.5rem auto;
-    height: 0.1rem;
-    background-color: black;
-    opacity: 0;
-  }
-
-  .tax-toggle {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    border: 1px solid black;
-    border-radius: 1rem;
-    min-height: 2.5rem;
-    max-height: 4.5rem;
-    overflow: hidden;
-    padding: 1rem;
-  }
-
-  .tax-toggle label {
-    text-align: center;
-  }
-
-  .tax-info {
-    display: none;
-  }
-</style>
-
 <title><%= appName %></title>
 
 <!-- <div class="heading">
@@ -222,17 +160,4 @@
   <% } %>
 </div>
 
-<script>
-  let taxSwitch = document.getElementById("flexSwitchCheckDefault");
-  taxSwitch.addEventListener("click", () => {
-    let taxInfo = document.getElementsByClassName("tax-info");
-
-    for (info of taxInfo) {
-      if (info.style.display !== "inline") {
-        info.style.display = "inline";
-      } else {
-        info.style.display = "none";
-      }
-    }
-  });
-</script>
+<script src="/js/taxSwitch.js"></script>
