--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -39,7 +39,7 @@
         ></textarea>
         <div class="invalid-feedback">Please enter a short description</div>
       </div>
-      <div class="mb-3">
+      <div id="dropArea" class="mb-3">
         <label class="form-label" for="image">Upload Listing Image</label>
         <input
           name="listing[image]"
@@ -97,3 +97,5 @@
     </form>
   </div>
 </div>
+
+<script src="/js/dragAndDrop.js"></script>
