--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,9 +1,18 @@
 <footer>
   <div class="f-info">
     <div class="f-info-socials">
-      <i class="fa-brands fa-square-facebook"></i>
-      <i class="fa-brands fa-square-instagram"></i>
-      <i class="fa-brands fa-linkedin"></i>
+      <a href="https://www.instagram.com/mdadnanhusaain" target="_blank">
+        <i class="fa-brands fa-square-instagram"></i>
+      </a>
+      <a href="https://github.com/mdadnanhusaain" target="_blank">
+        <i class="fa-brands fa-square-github"></i>
+      </a>
+      <a href="https://twitter.com/mdadnanhusaain" target="_blank">
+        <i class="fa-brands fa-square-x-twitter"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/mdadnanhusaain/" target="_blank">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
     </div>
     <div class="f-info-brand">&copy; <%= appName %> Pvt. Ltd.</div>
     <div class="f-info-links">
