--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -15,14 +15,14 @@
     <div class="collapse navbar-collapse mt-1" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <hr class="hr" />
-        <!-- <a class="nav-link" href="/">Home</a> -->
         <a class="nav-link" href="/listings">Explore</a>
       </div>
       <div class="navbar-nav ms-auto">
-        <form class="d-flex" role="search">
+        <form class="d-flex" role="search" action="/listings/search">
           <input
             class="form-control me-2 search-inp"
             type="search"
+            name="search"
             placeholder="Search Destinations"
           />
           <button class="btn search-btn" type="submit">
