Fixed Edit form bugs

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -5,100 +5,42 @@
     <h3>Add New Listing to <%= appName %></h3>
     <hr class="hr" />
 
-    <form
-      action="/listings"
-      method="POST"
-      class="needs-validation"
-      novalidate
-      enctype="multipart/form-data"
-    >
+    <form action="/listings" method="POST" class="needs-validation" novalidate enctype="multipart/form-data">
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
-        <input
-          id="title"
-          class="form-control"
-          type="text"
-          name="listing[title]"
-          placeholder="Enter title"
-          autocomplete="off"
-          required
-        />
+        <input id="title" class="form-control" type="text" name="listing[title]" placeholder="Enter title" autocomplete="off" required />
         <div class="valid-feedback">Title looks good!</div>
         <div class="invalid-feedback">Title cannot be empty!</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="description">Description</label>
-        <textarea
-          id="description"
-          class="form-control"
-          type="text"
-          name="listing[description]"
-          placeholder="Enter description"
-          autocomplete="off"
-          required
-        ></textarea>
+        <textarea id="description" class="form-control" type="text" name="listing[description]" placeholder="Enter description" autocomplete="off" required></textarea>
         <div class="invalid-feedback">Please enter a short description</div>
       </div>
       <div id="dropArea" class="mb-3">
         <label class="form-label" for="image">Upload Listing Image</label>
-        <input
-          name="listing[image]"
-          id="image"
-          class="form-control"
-          type="file"
-          required
-        />
+        <input name="listing[image]" id="image" class="form-control" type="file" required />
       </div>
       <div class="row">
         <div class="mb-3 col-md-4">
           <label class="form-label" for="price">Price</label>
-          <input
-            id="price"
-            class="form-control"
-            type="text"
-            name="listing[price]"
-            placeholder="Enter price"
-            autocomplete="off"
-            required
-          />
+          <input id="price" class="form-control" type="text" name="listing[price]" placeholder="Enter price" autocomplete="off" required />
           <div class="invalid-feedback">Price should be Valid!</div>
         </div>
         <div class="mb-3 col-md-8">
           <label class="form-label" for="country">Country</label>
-          <input
-            id="country"
-            class="form-control"
-            type="text"
-            name="listing[country]"
-            placeholder="Enter country"
-            autocomplete="off"
-            required
-          />
+          <input id="country" class="form-control" type="text" name="listing[country]" placeholder="Enter country" autocomplete="off" required />
           <div class="invalid-feedback">Country name should be valid</div>
         </div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="location">Location</label>
-        <input
-          id="location"
-          class="form-control"
-          type="text"
-          name="listing[location]"
-          placeholder="Enter location"
-          autocomplete="off"
-          required
-        />
+        <input id="location" class="form-control" type="text" name="listing[location]" placeholder="Enter location" autocomplete="off" required />
         <div class="invalid-feedback">Location should be valid</div>
       </div>
       <div class="mb-3">
         <label class="form-label" for="filter">Filter</label>
-        <select
-          name="listing[filter][]"
-          id="filter"
-          class="form-select"
-          multiple
-          required
-        >
+        <select name="listing[filter][]" id="filter" class="form-select" multiple required>
           <option value="rooms">Rooms</option>
           <option value="iconiccities">Iconic Cities</option>
           <option value="mountains">Mountains</option>
